# CozyMemory

./: .coveragerc  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily-scan.yml  deploy-website.yml  publish-sdks.yml
CozyMemory/: Caddyfile  docker-compose.1panel.yml
CozyMemory/nav/: index.html
CozyMemory/prometheus/: alerts.yml  prometheus.yml
CozyMemory/sql/: init.sh  sync-passwords.sh
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_app_datasets.py  b2c3d4e5f6a7_api_usage.py  e8718d7f606c_initial_org_developer_app_api_key_.py
archive/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
archive/deploy/deploy/: docker-compose.yml  init.sql
archive/docs/architecture/: 00-architecture-summary.md
archive/docs/dev/: LOCAL-DEV-GUIDE.md
archive/docs/phase2/: PHASE2-DAY1-001.md  PHASE2-KICKOFF-001.md  PHASE2-PLAN-001.md
archive/docs/phase3/: PHASE3-DAY1-001.md
archive/src/adapters/: memobase_adapter.py  sqlite_adapter.py
archive/src/api/: main.py
archive/src/api/v1/: schemas.py
archive/src/cache/: __init__.py
archive/src/fusion/: __init__.py  base.py
archive/src/models/: __init__.py  memory.py
archive/src/routers/: __init__.py  intent_router.py  weighted_router.py
archive/src/services/: enhanced_memory_service.py  memory_service.py  router_service.py
archive/src/tests/performance/: benchmark.py
archive/src/tests/unit/: test_api.py  test_api_extended.py  test_enhanced_service.py  test_router_fusion.py  test_sqlite_adapter.py
archive/src/utils/: __init__.py  config.py  logger.py
archive/unified_deployment/: .env.example  docker-compose.1panel.yml
archive/unified_deployment/conf/: config.yaml
archive/unified_deployment/resources/cognee_sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PERFORMANCE_OPTIMIZATIONS_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS_TEST_REPORT.md  PERFORMANCE_TESTS_SUMMARY.md  PUBLISH_GUIDE.md  PUBLISH_NOW.md  QUICK_PUBLISH.md  README_PUBLISH.md  publish_to_pypi.sh
archive/unified_deployment/resources/cognee_sdk/cognee_sdk/: __init__.py  py.typed
archive/unified_deployment/resources/cognee_sdk/docs/: API.md  MIGRATION.md  TROUBLESHOOTING.md
archive/unified_deployment/resources/cognee_sdk/examples/: __init__.py  async_operations.py  file_upload.py  search_types.py
archive/unified_deployment/resources/cognee_sdk/tests/: INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_SUMMARY.md  RUN_INTEGRATION_TESTS.md  __init__.py  debug_add_request.py  debug_get_data.py  setup_test_data.py  test_auth.py  test_client.py  test_cognify_comprehensive.py  test_datasets.py  test_exceptions.py  test_file_upload.py  test_integration_scenarios.py  test_models.py  test_search_comprehensive.py  test_server_connection.py  test_sync.py  test_websocket.py
archive/unified_deployment/resources/patches/: README.md
archive/unified_deployment/resources/webui-patches/: README.md  remove-apps-navbar.patch  remove-install-component.patch
archive/unified_deployment/scripts/: rollback.sh
archive/unified_deployment/sql/: init.sql
base_runtime/: .env.example  Caddyfile  build.sh  docker-compose.1panel.yml
base_runtime/nav/: index.html
base_runtime/prometheus/: prometheus.yml
base_runtime/sql/: init.sh  init.sql
deploy/: docker-compose.yml  entrypoint.sh  supervisord.conf
deploy/docker/: docker-compose.yml
deploy/k8s/: README.md  deployment.yaml  secret.yaml  service.yaml
docs/: DESIGN-GAP-ANALYSIS.md  DEV-STD-001.md  DOCUMENT-UPDATE-PLAN.md  FINAL-COMPLETE-REPORT.md  PROGRESS.md  README.md  SIMPLIFIED-REPORT.md  STRUCTURE.md  UPDATE-COMPLETE-REPORT.md  api-reference.md  architecture.md  data-models.md  deployment.md  migration-guide.md  project-report.md  sdk-clients.md  usage-cn.md
docs/api/: reference.md
docs/arch/: ADR-006-memory-optimization.md
docs/architecture/: 00-architecture-summary.md  00-architecture-vision.md  00-vision.md  01-architecture.md  01-business-architecture.md  02-data-architecture.md  03-application-architecture.md  04-technology-architecture.md  05-implementation-plan.md  06-quality-assurance-plan.md  07-memory-engine-analysis.md  08-memory-engine-deep-analysis.md
docs/decisions/: 000-adr-index.md
docs/dev/: local-dev.md  testing.md
docs/guides/: adapters.md  configuration.md  getting-started.md  router.md
docs/ops/: 01-cicd-guide.md
docs/phase1/: PHASE1-GAP-001.md  REPORT-001.md
proto/: common.proto  context.proto  conversation.proto  knowledge.proto  profile.proto
scripts/: dev.sh  generate_grpc.sh  init-projects.sh  seed_admin_developer.py
sdks/: .gitignore
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/src/cozymemory/: __init__.py  _http.py  client.py  exceptions.py
sdks/python/src/cozymemory/resources/: context.py  conversations.py  knowledge.py  profiles.py
sdks/python/tests/: test_client.py
src/: __init__.py
tests/: conftest.py
ui/: .dockerignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  vitest.config.ts
unified_deployment/: docker-compose.1panel.yml
unified_deployment/resources/cognee_sdk/: CODE_QUALITY_SUMMARY.md  COVERAGE_100_PROGRESS.md  LICENSE  PUBLISH_0.3.0.md  README.md  RELEASE_0.3.0.md  TEST_COVERAGE_REPORT.md  publish.sh  pyproject.toml
unified_deployment/resources/cognee_sdk/cognee_sdk/: client.py  exceptions.py  models.py
unified_deployment/resources/cognee_sdk/examples/: advanced_features.py  basic_usage.py
unified_deployment/resources/cognee_sdk/tests/: INTEGRATION_TEST_README.md  TEST_PERFORMANCE_OPTIMIZATIONS_RESULTS.md  test_add_data_direct.py  test_advanced_features.py  test_concurrency.py  test_coverage_100.py  test_delete_comprehensive.py  test_infrastructure.py  test_memify.py  test_performance_optimizations.py  test_server_integration.py  test_visualize.py
website/: README.md  astro.config.ts  docker-compose.yml  package-lock.json  package.json
(+369 files in other folders)
