[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cozymemory"
version = "0.2.0"
description = "统一 AI 记忆服务平台 - 整合 Mem0, Memobase, Cognee 三大引擎"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "httpx[http2]>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "grpcio>=1.80.0,<2.0",
    "grpcio-tools>=1.80.0,<2.0",
    "grpcio-health-checking>=1.80.0,<2.0",
    "protobuf>=4.25.0,<8.0",
    "structlog>=24.0,<26.0",
    "redis>=5.0,<6.0",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "prometheus-client>=0.20,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "bcrypt>=4.1,<5.0",
    "pyjwt>=2.8,<3.0",
    "email-validator>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "ruff>=0.3",
    "mypy>=1.9",
]
otel = [
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0,<1.0",
    "opentelemetry-instrumentation-httpx>=0.44b0,<1.0",
    "opentelemetry-exporter-otlp>=1.20,<2.0",
]

[project.scripts]
cozymemory-grpc = "cozymemory.grpc_server:run_grpc_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["src/cozymemory/grpc_server/*_pb2.py", "src/cozymemory/grpc_server/*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/cozymemory/grpc_server/server.py" = ["N802"]  # gRPC 方法必须 PascalCase
"src/cozymemory/app.py" = ["N806"]  # 中间件内的常量命名
"tests/**/*.py" = ["E501"]  # 测试允许长行（断言、fixture payload）

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["cozymemory/grpc_server/"]

[[tool.mypy.overrides]]
module = "cozymemory.models.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true