[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cozymemory"
version = "0.1.0"
description = "统一 AI 记忆服务平台 - 整合 Mem0, Memobase, Cognee 三大引擎"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CozyMemory Team", email = "team@cozymemory.com"}
]
maintainers = [
    {name = "蟹小五", email = "admin@cozymemory.com"}
]
keywords = [
    "memory",
    "ai",
    "llm",
    "rag",
    "knowledge-graph",
    "user-profile"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

vector = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
]

memobase = [
    "memobase-client>=0.1.0",
]

mem0 = [
    "mem0ai>=0.1.0",
]

cognee = [
    "cognee>=0.1.0",
]

all = [
    "cozymemory[memobase,mem0,cognee]",
]

[project.urls]
Homepage = "https://github.com/zinohome/CozyMemory"
Documentation = "https://github.com/zinohome/CozyMemory/docs"
Repository = "https://github.com/zinohome/CozyMemory"
Issues = "https://github.com/zinohome/CozyMemory/issues"
Changelog = "https://github.com/zinohome/CozyMemory/blob/main/CHANGELOG.md"

[project.scripts]
cozymemory = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src", "src.api", "src.adapters", "src.services", "src.models", "src.utils"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "memobase.*",
    "mem0.*",
    "cognee.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/main.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
tests = ["B201", "B301"]
skips = ["B101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
