[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozymemory"
version = "0.1.0"
description = "CozyMemory Python SDK — unified AI memory platform client"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "CozyMemory"}]
license = {text = "Apache-2.0"}
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/cozymemory"]
